# scathmore-server

./: README.txt  pyproject.toml
schemas/: 0001_init.sql  0002_usernames.sql  0003_thunderball.sql
src/app/: __init__.py  main.py
